--- a/frontend/src/theme/variables.css
+++ b/frontend/src/theme/variables.css
@@ -3,6 +3,15 @@ http://ionicframework.com/docs/theming/ */
 
 /** Ionic CSS Variables **/
 :root {
+  /** custom **/
+  --color-very-happy: #41B883;
+  --color-happy: #A1C349;
+  --color-neutral: #F2D600;
+  --color-sad: #FF6633;
+  --color-very-sad: #FF6633;
+  --color-unspecified: rgba(169, 169, 169, 0.2);
+
+
   /** primary **/
   --ion-color-primary: #926520;
   --ion-color-primary-rgb: 56, 128, 255;
