--- a/frontend/src/theme/variables.css
+++ b/frontend/src/theme/variables.css
@@ -133,7 +133,7 @@ body.dark {
 
   --ion-color-light: #6c5d4a;
   --ion-color-light-rgb: 108, 93, 74;
-  --ion-color-light-contrast: #ffffff;
+  --ion-color-light-contrast: #000000;
   --ion-color-light-contrast-rgb: 255, 255, 255;
   --ion-color-light-shade: #5f5241;
   --ion-color-light-tint: #7b6d5c;
@@ -151,6 +151,7 @@ body.dark {
   --ion-color-dark-contrast-rgb: 255, 255, 255;
   --ion-color-dark-shade: #1b1813;
   --ion-color-dark-tint: #35322d;
+  
 }
 
   /*
