style(frontend): Improve calendar readability

--- a/frontend/src/theme/variables.css
+++ b/frontend/src/theme/variables.css
@@ -131,7 +131,7 @@ body.dark {
   --ion-color-danger-shade: #e09e96;
   --ion-color-danger-tint: #ffbcb3;
 
-  --ion-color-light: #6c5d4a;
+  --ion-color-light: #8d7c64;
   --ion-color-light-rgb: 108, 93, 74;
   --ion-color-light-contrast: #000000;
   --ion-color-light-contrast-rgb: 255, 255, 255;
